--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       rel="stylesheet"
     />
 
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
+
     <title>RocketMovies</title>
   </head>
   <body>
